#9481 z-index issue

--- a/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
@@ -70,21 +70,21 @@
     }
 
     .form-checkbox-field{
-        width: 2%;
+        width: 1%;
         float: left;
         margin-bottom: 5px;
         margin-top: 2px;
-        z-index: 10;
         input{
             margin: 0;
             padding: 0;
             min-height: 0;
             width: 16px;
             height: 16px;
+            position: relative;
         }
     }
     .form-checkbox-label{
-        width: 98%;
+        width: 99%;
         float: left;
         padding-left: 15px;
     }
